--- a/Resources/Prototypes/Voice/speech_verbs.yml
+++ b/Resources/Prototypes/Voice/speech_verbs.yml
@@ -125,6 +125,22 @@
   - chat-speech-verb-small-mob-2
 
 - type: speechVerb
+  id: Raccoon
+  name: chat-speech-verb-name-raccoon
+  speechVerbStrings:
+  - chat-speech-verb-raccoon-1
+  - chat-speech-verb-raccoon-2
+  - chat-speech-verb-raccoon-3
+
+- type: speechVerb
+  id: Possum
+  name: chat-speech-verb-name-possum
+  speechVerbStrings:
+  - chat-speech-verb-possum-1
+  - chat-speech-verb-possum-2
+  - chat-speech-verb-possum-3
+
+- type: speechVerb
   id: Monkey
   name: chat-speech-verb-name-monkey
   speechVerbStrings:
