--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -326,14 +326,16 @@
   parent: BaseStationEventShortDelay
   components:
   - type: StationEvent
-    weight: 4
+    weight: 6
     duration: 50
   - type: VentCrittersRule
     entries:
     - id: MobRaccoonGhost
-      prob: 0.03
+      prob: 0.02
     - id: MobPossumGhost
-      prob: 0.03
+      prob: 0.02
+    - id: MobMouse
+      prob: 0.02
 
 
 - type: entity
