--- a/Resources/keybinds.yml
+++ b/Resources/keybinds.yml
@@ -279,18 +279,6 @@ binds:
 - function: FlipObject
   type: State
   key: F
-- function: ArcadeUp
-  type: State
-  key: Up
-- function: ArcadeDown
-  type: State
-  key: Down
-- function: ArcadeLeft
-  type: State
-  key: Left
-- function: ArcadeRight
-  type: State
-  key: Right
 - function: TextCursorLeft
   type: State
   key: Left
@@ -508,6 +496,22 @@ binds:
   type: State
   key: MouseMiddle
   mod1: Shift
+- function: ArcadeUp
+  type: State
+  key: Up
+  priority: -1
+- function: ArcadeDown
+  type: State
+  key: Down
+  priority: -1
+- function: ArcadeLeft
+  type: State
+  key: Left
+  priority: -1
+- function: ArcadeRight
+  type: State
+  key: Right
+  priority: -1
 - function: Arcade1
   type: State
   key: Space
