--- a/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
+++ b/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
@@ -13,7 +13,7 @@
     shoes: ClothingShoesBootsJack
     id: HeccdiverPDA
     pocket1: RadioHandheld
-    pocket2: FlashlightSeclite
+    pocket2: FlashlightLantern
     belt: ClothingBeltMilitaryWebbingMedFilled
   storage:
     back:
