--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -620,7 +620,7 @@
 
 - type: loadoutGroup
   id: SalvageSpecialistNeck
-  name: loadout-group-salvage-specialist-neck
+  name: Mantle
   loadouts:
   - MinerCloak
 
