you can now throw the space law book for 1 blunt damage

--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -385,6 +385,10 @@
     damage:
       types:
         Blunt: 1
+  - type: DamageOtherOnHit # so you can throw the book at 'em
+    damage:
+      types:
+        Blunt: 1
 
 - type: entity
   parent: BookBase
