--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -17,6 +17,11 @@
 #      time: 144000 #40 hrs
     - !type:AgeRequirement
       requiredAge: 21
+    - !type:TraitsRequirement # No Pacifist or Blind Sec
+    inverted: true
+    traits:
+    - Pacifist
+    - Blindness
   weight: 10
   startingGear: HoSGear
   icon: "JobIconHeadOfSecurity"
