--- a/Resources/Prototypes/Roles/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/detective.yml
@@ -3,6 +3,12 @@
   name: job-name-detective
   description: job-description-detective
   playTimeTracker: JobDetective
+  requirements:
+  - !type:TraitsRequirement # No Pacifist or Blind Sec
+    inverted: true
+    traits:
+    - Pacifist
+    - Blindness
   startingGear: DetectiveGear
   icon: "JobIconDetective"
   supervisors: job-supervisors-hos
