--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -244,6 +244,8 @@
   - type: Sprite
     # Once it's in a core it's pretty much an abstract entity at that point.
     visible: false
+  - type: BlockMovement
+    blockInteraction: false
   - type: SiliconLawProvider
     laws: Crewsimov
   - type: SiliconLawBound
