--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -40,3 +40,4 @@
     - /Audio/Lobby/storywriter.ogg
     - /Audio/Lobby/the_norwegians.ogg
     - /Audio/Lobby/topolla_theatre.ogg
+    - /Audio/Lobby/the_flute_tune.ogg
