--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -213,3 +213,8 @@
   license: "Custom. Suggested by starplatiunumb"
   copyright: "Presenting VVVVVV by Souleye."
   source: "https://www.youtube.com/watch?v=tdE3n-pxF5Y"
+
+- files: ["the_flute_tune.ogg"]
+  license: "Custom."
+  copyright: "The Flute Tune (Soulpride Remix) by J-Cut & Kolt Siewerts"
+  source: "https://www.youtube.com/watch?v=tdE3n-pxF5Y"
