--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -217,4 +217,4 @@
 - files: ["the_flute_tune.ogg"]
   license: "Custom."
   copyright: "The Flute Tune (Soulpride Remix) by J-Cut & Kolt Siewerts"
-  source: "https://www.youtube.com/watch?v=tdE3n-pxF5Y"
+  source: "https://www.youtube.com/watch?v=IwLSrNu1ppI"
