--- a/Resources/Audio/Jukebox/attributions.yml
+++ b/Resources/Audio/Jukebox/attributions.yml
@@ -145,3 +145,8 @@
   license: "Custom. Suggested by starplatiunumb"
   copyright: "Presenting VVVVVV by Souleye."
   source: "https://www.youtube.com/watch?v=tdE3n-pxF5Y"
+
+- files: ["the_flute_tune.ogg"]
+  license: "Custom."
+  copyright: "The Flute Tune (Soulpride Remix) by J-Cut & Kolt Siewerts"
+  source: "https://www.youtube.com/watch?v=IwLSrNu1ppI"
