--- a/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
+++ b/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
@@ -2,7 +2,7 @@
 
 #Heccdiver
 - type: startingGear
-  id: Heccdiver
+  id: HeccdiverGear
   equipment:
     jumpsuit: ClothingUniformJumpsuitHeccdiver
     back: ClothingBackpackDuffel
