--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
@@ -1,3 +1,17 @@
+# "Mixologist" Time req
+- type: loadoutEffectGroup
+  id: Mixologist
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobBartender
+      time: 180000 #50 hrs
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:DepartmentTimeRequirement
+      department: Medical
+      time: 72000 # 20 hrs
 # Head
 - type: loadout
   id: BartenderHead
@@ -40,3 +54,14 @@
   id: BartenderWintercoat
   equipment:
     outerClothing: ClothingOuterWinterBar
+    
+ # Trinket
+- type: loadout
+  id: ChemMasterFlatpack
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: Mixologist
+  storage:
+    back:
+    - ChemMasterFlatpack
+    
