--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -220,6 +220,13 @@
   - BartenderVest
   - BartenderApron
   - BartenderWintercoat
+  
+- type: loadoutGroup
+  id: Mixologist
+  name: loadout-group-bartender-mixologist
+  minLimit: 0
+  loadouts:
+  - ChemMasterFlatpack
 
 - type: loadoutGroup
   id: ChefHead
