reimplemented Brigmedic equipment
-Added brigmedic clothes to secdrobe
-Added brigmedic equipment to warden's locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -24,6 +24,8 @@
         amount: 2
       - id: RemoteSignaller
         amount: 2
+      - id: ClothingOuterHardsuitBrigmedic
+      - id: BrigmedicPDA
 
 - type: entity
   id: LockerWardenFilled
@@ -50,6 +52,8 @@
         amount: 2
       - id: RemoteSignaller
         amount: 2
+      - id: ClothingOuterHardsuitBrigmedic
+      - id: BrigmedicPDA
 
 - type: entity
   id: LockerSecurityFilled
