--- a/Resources/Prototypes/Accents/gray_replacements.yml
+++ b/Resources/Prototypes/Accents/gray_replacements.yml
@@ -156,3 +156,79 @@
     accent-gray-words-153: accent-gray-words-replace-153
     accent-gray-words-154: accent-gray-words-replace-154
     accent-gray-words-155: accent-gray-words-replace-155
+    accent-gray-words-156: accent-gray-words-replace-156
+    accent-gray-words-157: accent-gray-words-replace-157
+    accent-gray-words-158: accent-gray-words-replace-158
+    accent-gray-words-159: accent-gray-words-replace-159
+    accent-gray-words-160: accent-gray-words-replace-160
+    accent-gray-words-161: accent-gray-words-replace-161
+    accent-gray-words-162: accent-gray-words-replace-162
+    accent-gray-words-163: accent-gray-words-replace-163
+    accent-gray-words-164: accent-gray-words-replace-164
+    accent-gray-words-165: accent-gray-words-replace-165
+    accent-gray-words-166: accent-gray-words-replace-166
+    accent-gray-words-167: accent-gray-words-replace-167
+    accent-gray-words-168: accent-gray-words-replace-168
+    accent-gray-words-169: accent-gray-words-replace-169
+    accent-gray-words-170: accent-gray-words-replace-170
+    accent-gray-words-171: accent-gray-words-replace-171
+    accent-gray-words-172: accent-gray-words-replace-172
+    accent-gray-words-173: accent-gray-words-replace-173
+    accent-gray-words-174: accent-gray-words-replace-174
+    accent-gray-words-175: accent-gray-words-replace-175
+    accent-gray-words-176: accent-gray-words-replace-176
+    accent-gray-words-177: accent-gray-words-replace-177
+    accent-gray-words-178: accent-gray-words-replace-178
+    accent-gray-words-179: accent-gray-words-replace-179
+    accent-gray-words-180: accent-gray-words-replace-180
+    accent-gray-words-181: accent-gray-words-replace-181
+    accent-gray-words-182: accent-gray-words-replace-182
+    accent-gray-words-183: accent-gray-words-replace-183
+    accent-gray-words-184: accent-gray-words-replace-184
+    accent-gray-words-185: accent-gray-words-replace-185
+    accent-gray-words-186: accent-gray-words-replace-186
+    accent-gray-words-187: accent-gray-words-replace-187
+    accent-gray-words-188: accent-gray-words-replace-188
+    accent-gray-words-189: accent-gray-words-replace-189
+    accent-gray-words-190: accent-gray-words-replace-190
+    accent-gray-words-191: accent-gray-words-replace-191
+    accent-gray-words-192: accent-gray-words-replace-192
+    accent-gray-words-193: accent-gray-words-replace-193
+    accent-gray-words-194: accent-gray-words-replace-194
+    accent-gray-words-195: accent-gray-words-replace-195
+    accent-gray-words-196: accent-gray-words-replace-196
+    accent-gray-words-197: accent-gray-words-replace-197
+    accent-gray-words-198: accent-gray-words-replace-198
+    accent-gray-words-199: accent-gray-words-replace-199
+    accent-gray-words-200: accent-gray-words-replace-200
+    accent-gray-words-201: accent-gray-words-replace-201
+    accent-gray-words-202: accent-gray-words-replace-202
+    accent-gray-words-203: accent-gray-words-replace-203
+    accent-gray-words-204: accent-gray-words-replace-204
+    accent-gray-words-205: accent-gray-words-replace-205
+    accent-gray-words-206: accent-gray-words-replace-206
+    accent-gray-words-207: accent-gray-words-replace-207
+    accent-gray-words-208: accent-gray-words-replace-208
+    accent-gray-words-209: accent-gray-words-replace-209
+    accent-gray-words-210: accent-gray-words-replace-210
+    accent-gray-words-211: accent-gray-words-replace-211
+    accent-gray-words-212: accent-gray-words-replace-212
+    accent-gray-words-213: accent-gray-words-replace-213
+    accent-gray-words-214: accent-gray-words-replace-214
+    accent-gray-words-215: accent-gray-words-replace-215
+    accent-gray-words-216: accent-gray-words-replace-216
+    accent-gray-words-217: accent-gray-words-replace-217
+    accent-gray-words-218: accent-gray-words-replace-218
+    accent-gray-words-219: accent-gray-words-replace-219
+    accent-gray-words-220: accent-gray-words-replace-220
+    accent-gray-words-221: accent-gray-words-replace-221
+    accent-gray-words-222: accent-gray-words-replace-222
+    accent-gray-words-223: accent-gray-words-replace-223
+    accent-gray-words-224: accent-gray-words-replace-224
+    accent-gray-words-225: accent-gray-words-replace-225
+    accent-gray-words-226: accent-gray-words-replace-226
+    accent-gray-words-227: accent-gray-words-replace-227
+    accent-gray-words-228: accent-gray-words-replace-228
+    accent-gray-words-229: accent-gray-words-replace-229
+    accent-gray-words-230: accent-gray-words-replace-230
+    accent-gray-words-231: accent-gray-words-replace-231
