Add Sec Badge + Tweak Armor Sprite

--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -27,6 +27,7 @@
 - type: startingGear
   id: SecurityOfficerGear
   equipment:
+    neck: ClothingNeckSecurityOfficerBadge # GreyStation - Addition
     eyes: ClothingEyesGlassesSecurity
     ears: ClothingHeadsetSecurity
     pocket1: WeaponPistolMk58
