--- a/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
+++ b/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
@@ -46,3 +46,14 @@
     sprite: GreyStation/Clothing/Neck/Misc/detectivebadge.rsi
   - type: Clothing
     sprite: GreyStation/Clothing/Neck/Misc/detectivebadge.rsi
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckSecurityOfficerBadge
+  name: security officer badge
+  description: A badge for the station's security officer. Every officer gets one after completing basic training.
+  components:
+  - type: Sprite
+    sprite: GreyStation/Clothing/Neck/Misc/badge.rsi
+  - type: Clothing
+    sprite: GreyStation/Clothing/Neck/Misc/badge.rsi
