Temporary mass commenting.

--- a/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
@@ -1,16 +1,16 @@
-- type: entity
-  name: terragov radio
-  description: A handy terragov radio.
-  parent: [ RadioHandheld, BaseTerragovContraband ]
-  id: RadioHandheldTerragov
-  components:
-  - type: RadioMicrophone
-    broadcastChannel: Terragov
-  - type: RadioSpeaker
-    channels:
-    - Security
-  - type: Sprite
-    sprite: Ronstation/Objects/Devices/terragovhandy.rsi
-  - type: Item
-    sprite: Ronstation/Objects/Devices/terragovhandy.rsi
-    heldPrefix: walkietalkie
+#- type: entity
+#  name: terragov radio
+#  description: A handy terragov radio.
+#  parent: [ RadioHandheld, BaseTerragovContraband ]
+#  id: RadioHandheldTerragov
+#  components:
+#  - type: RadioMicrophone
+#    broadcastChannel: Terragov
+#  - type: RadioSpeaker
+#    channels:
+#    - Security
+#  - type: Sprite
+#    sprite: Ronstation/Objects/Devices/terragovhandy.rsi
+#  - type: Item
+#    sprite: Ronstation/Objects/Devices/terragovhandy.rsi
+#    heldPrefix: walkietalkie
