Fixed RadioSpeaker channels.

--- a/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
@@ -8,7 +8,7 @@
     broadcastChannel: Terragov
   - type: RadioSpeaker
     channels:
-    - Security
+    - Terragov
   - type: Sprite
     sprite: Ronstation/Objects/Devices/terragovhandy.rsi
   - type: Item
