--- a/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Devices/radio.yml
@@ -5,10 +5,10 @@
   id: RadioHandheldTerragov
   components:
   - type: RadioMicrophone
-    broadcastChannel: Terragov
+    broadcastChannel: TerraGov
   - type: RadioSpeaker
     channels:
-    - Terragov
+    - TerraGov
   - type: Sprite
     sprite: Ronstation/Objects/Devices/terragovhandy.rsi
   - type: Item
