--- a/Resources/Prototypes/Ronstation/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Misc/identification_cards.yml
@@ -7,12 +7,12 @@
   name: heccdiver ID card
   components:
   - type: Sprite
-    #sprite: Ronstation/Objects/Misc/id_cards.rsi
+    sprite: Ronstation/Objects/Misc/id_cards.rsi
     layers:
-    - state: pirate #heccdiver
+    - state: heccdiver
   - type: Clothing
     slots:
     - idcard
-    #sprite: Ronstation/Objects/Misc/id_cards.rsi
+    sprite: Ronstation/Objects/Misc/id_cards.rsi
     layers:
-    - state: pirate #heccdiver
+    - state: heccdiver
