Modified backpack weapon and fixed missing lines in humanoid.yml prototype.

--- a/Resources/Prototypes/Ronstation/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Mobs/Player/humanoid.yml
@@ -1,6 +1,7 @@
 ## Heccdiver
 
-id: RandomHumanoidSpawnerHeccdiver
+- type: entity
+  id: RandomHumanoidSpawnerHeccdiver
   name: HECCdiver
   suffix: TerragovRole, Heccdiver
   components:
