--- a/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
+++ b/Resources/Prototypes/GreyStation/Entities/Clothing/Neck/misc.yml
@@ -53,6 +53,8 @@
   name: security officer badge
   description: A badge for the station's security officer. Every officer gets one after completing basic training.
   components:
+  - type: Item
+    size: Tiny
   - type: Sprite
     sprite: GreyStation/Clothing/Neck/Misc/badge.rsi
   - type: Clothing
