Minor fix in humanoid.yml and added retro laser to Heccdiver starting gear.

--- a/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
+++ b/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
@@ -18,6 +18,10 @@
   storage:
     back:
     - BoxSurvival
-    - MagazinePistol
-    - WeaponPistolMk58
+    - WeaponRevolverMateba
+    - SpeedLoaderMagnumAP
+    - SpeedLoaderMagnumAP
+    - SpeedLoaderMagnumAP
     - CrowbarRed
+    inhand:
+    - WeaponLaserGun
