--- a/Resources/Prototypes/Ronstation/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Mobs/Player/humanoid.yml
@@ -32,5 +32,5 @@
     - type: RandomMetadata
       nameSegments:
         - NamesFirstMilitaryLeader
-        - NamesLastMilitary- type: entity
+        - NamesLastMilitary
 
