Fixed PDA texture directory and added cape to heccdiver starting gear.

--- a/Resources/Prototypes/Ronstation/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Devices/pda.yml
@@ -4,12 +4,14 @@
   name: heccdiver PDA
   description: Looks a lot different than normal PDAs.
   components:
-  - type: Pda
+  - type: Sprite
     sprite: Ronstation/Objects/Devices/pda.rsi
+  - type: Icon
+    sprite: Ronstation/Objects/Devices/pda.rsi
+  - type: Pda
     id: HeccdiverIDCard
     state: pda-heccdiver
   - type: PdaBorderColor
     borderColor: "#2F3030"
   - type: Icon
-    sprite: Ronstation/Objects/Devices/pda.rsi
     state: pda-heccdiver
