--- a/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
+++ b/Resources/Prototypes/Ronstation/Roles/Jobs/Fun/terragov_startinggear.yml
@@ -8,6 +8,7 @@
     back: ClothingBackpackDuffel
     mask: ClothingMaskGas
     eyes: ClothingEyesGlassesSunglasses
+    neck: ClothingNeckCloakHeccdiver
     outerClothing: ClothingOuterHardsuitHeccdiver
     gloves: ClothingHandsGlovesCombat
     shoes: ClothingShoesBootsCombat
