--- a/Resources/Prototypes/Roles/Jobs/Science/borg.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/borg.yml
@@ -1,14 +1,13 @@
 # No idea why it's in sci but we ball.
-# TODO: Need to just force it to spawn on a spawner and allow takeover.
-# If no takeover then fallback.
 - type: job
   id: StationAi
   name: job-name-station-ai
   description: job-description-station-ai
   playTimeTracker: JobStationAi
   requirements:
-  - !type:OverallPlaytimeRequirement
-    time: 216000 #60 hrs
+  - !type:RoleTimeRequirement
+    role: JobBorg
+    time: 18000  # 5 hrs
   canBeAntag: false
   icon: JobIconStationAi
   supervisors: job-supervisors-rd
@@ -21,7 +20,7 @@
   playTimeTracker: JobBorg
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 216000 #60 hrs
+      time: 216000 # 60 hrs
   canBeAntag: false
   icon: JobIconBorg
   supervisors: job-supervisors-rd
