scoop mine eyes

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -4,6 +4,21 @@
   description: Components added / removed from an entity that gets inserted into an AI core.
   noSpawn: true
   components:
+  - type: IntrinsicRadioReceiver
+  - type: IntrinsicRadioTransmitter
+    channels:
+    - Binary
+    - Common
+    - Command
+    - Engineering
+    - Medical
+    - Science
+    - Security
+    - Service
+    - Supply
+  - type: ActiveRadio
+    receiveAllChannels: true
+    globalReceive: true
   - type: IgnoreUIRange
   - type: StationAiHeld
   - type: StationAiOverlay
