--- a/Resources/Prototypes/Entities/Objects/Specific/Salvage/scanner.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Salvage/scanner.yml
@@ -17,7 +17,7 @@
     activeSound:
       path: /Audio/Ambience/Objects/light_hum.ogg
       params:
-        volume: -15
+        volume: -3
         maxDistance: 1
   - type: Appearance
   - type: GenericVisualizer
@@ -38,6 +38,7 @@
   parent: [ MineralScannerUnpowered, PowerCellSlotMediumItem ]
   suffix: Powered
   components:
+  - type: ToggleCellDraw
   - type: PowerCellDraw
     drawRate: 2.4 # ~5 minutes on a medium power cell.
     useRate: 0
@@ -74,6 +75,7 @@
   parent: [ AdvancedMineralScannerUnpowered, PowerCellSlotMediumItem ]
   suffix: Powered
   components:
+  - type: ToggleCellDraw
   - type: PowerCellDraw
     drawRate: 1.2 # ~10 minutes on a medium power cell.
     useRate: 0
