--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/botanist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/botanist.yml
@@ -1,3 +1,12 @@
+- type: loadoutEffectGroup
+  id: SeniorBotanist
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobBotanist
+      time: 54000 #15 hours, (currently) a fourth of the actual senior jobs' requirement.
+
 # Head
 - type: loadout
   id: BotanistHead
@@ -8,6 +17,14 @@
   id: BotanistBandana
   equipment:
     head: ClothingHeadBandBotany
+
+- type: loadout
+  id: BotanistBeret
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: SeniorBotanist
+  equipment:
+    head: ClothingHeadHatBeretSeniorBotanist
 
 # Jumpsuit
 - type: loadout
