--- a/Resources/ConfigPresets/WizardsDen/wizardsDen.toml
+++ b/Resources/ConfigPresets/WizardsDen/wizardsDen.toml
@@ -11,6 +11,7 @@ panic_bunker.enable_without_admins = true
 panic_bunker.show_reason = true
 panic_bunker.custom_reason = "You have not played on a Wizard's Den server long enough to connect to this server. Please play on Wizard's Den Lizard, Leviathan, or Farm Grass Hopper until you have more playtime."
 
+
 [infolinks]
 bug_report = "https://github.com/space-wizards/space-station-14/issues/new/choose"
 discord    = "https://discord.spacestation14.io"
@@ -38,3 +39,6 @@ see_own_notes = true
 deadmin_on_join = true
 new_player_threshold = 600
 alert.min_players_sharing_connection = 2
+
+[atmos]
+tank_fragment = false
